<resources>
    <string name="app_name">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="welcome">Welcome</string>
    <string name="user">User</string>
</resources>
